# arena-cat

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yml  pla_detallat.md  project.md  projecte.md  pyproject.toml
.github/workflows/: ci.yml  contributors.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py  models.py  rate_limit.py  schemas.py  security.py  seeds.py
backend/app/ranking/: __init__.py  confidence.py  ranking.py  sampler.py
backend/app/routes/: auth.py  ranking.py  task.py  vote.py
backend/app/services/: auth_service.py  ranking_service.py  task_service.py  vote_service.py
backend/migrations/: env.py
backend/migrations/versions/: 304213e3d640_esquema_inicial.py  43b1211542ba_add_users_and_sessions.py  5bcc14a623b7_add_users_and_sessions.py  94019e30371a_esquema_inicial.py  94019e30371a_initial_schema.py  f159ca3d2c6c_esquema_inicial.py
backend/scripts/: auth_flow_demo.py  seed_mock_tasks.py
backend/tests/: conftest.py  test_api.py  test_auth_api.py  test_carrega_inferencies.py  test_confidence.py  test_integration_scale.py  test_migracions.py  test_migrations.py  test_models.py  test_ranking.py  test_sampler.py  test_security.py  test_task_api.py  test_vote_api.py
config/: inferencia_local_config.yaml
config/inferencia/: inferencia_config.yaml  inferencia_cpu_config.yaml  inferencia_local_config.yaml
data/prompts/v1/: README.md  correccio.yaml  prompt_10_reformulacio.txt  prompt_1_reformulacio.txt  prompt_3_reformulacio.txt  prompt_7_reformulacio.txt  prompt_8_reformulacio.txt  reformulacio_2.txt  reformulacio_4.txt  reformulacio_5.txt  reformulacio_6.txt  reformulacio_9.txt  resultats_proves_models_vers1.md  traduccio_1.yaml  traduccio_10.txt  traduccio_2.yaml  traduccio_3.yaml  traduccio_4.yaml  traduccio_5.yaml  traduccio_6.yaml  traduccio_7.txt  traduccio_8.txt  traduccio_9.yaml  traduccio_exemple_1.yaml
docs/: T7_ranking_design.md  auth_flow_manual.md  avaluadors.md  db_schema.md  esquema_db.md  pla_detallat.md  projecte.md  usuaris_autenticacio.md
html/: README.md  app.js  index.html
infra/: init-db.sh
scripts/: README.md  analitza_inferencies.py  carrega_inferencies.py  inferencia.py  metriques.py  prompts_yaml.py  results.txt.j2
simulador/: index.html
tests/: test_inferencia.py
